@@ -124,7 +124,7 @@
 	  default-bevel-percent sp-padding nokogiri-user-level
 	  nokogiri-buttons workspace-boundary-mode
 	  workspace-send-boundary-mode lock-first-workspace
-	  ignore-window-input-hint default-window-animator
+	  ignore-window-input-hint
          move-outline-mode resize-outline-mode
          workspace-geometry
 	  pointer-motion-threshold ignore-program-positions))
