@@ -10,6 +10,10 @@
 	* lisp/sawfish/wm/util/compat.jl: Re-expose move-resize-options by
 	Christopher Bratusek. Brings back move-resize-raise-window and
 	resize-edge-mode to sawfish-ui.
+	* lisp/sawfish/wm/window-anim.jl
+	* lisp/sawfish/wm/util/compat.jl: Re-expose window-animator by
+	Christopher Bratusek. Brings back default-window-animator to
+	sawfish-ui.
 
 
 2008-08-29  Janek Kozicki <cosurgi@gmail.com>
